# knl

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
crumbs/devops/: github-pages-setup.md
docs/: configuration.md  hooks.py  index.md  install.sh  installation.md  quickstart.md  requirements.txt
docs/architecture/: context.md  installation.md  principles.md
docs/cli/: commands.md  config.md  crumbs.md  tasks.md
docs/development/: contributing.md  setup.md  testing.md
docs/guide/: git.md  knowledge.md  tasks.md
docs/overrides/: main.html
hooks/: README.md  install.sh  pre-commit
know-how/: README.md
mcp-servers/knl-docs-analyzer/: README.md  pyproject.toml
mcp-servers/knl-docs-analyzer/src/knl_docs_analyzer/: __init__.py  server.py
src/knl/: __init__.py  cli.py
src/knl/bundled_crumbs/: README.md  __init__.py
src/knl/commands/: __init__.py  config.py  crumb.py  docs.py  init.py  task.py
src/knl/core/: __init__.py  config.py  crumbs.py  doc_analyzer.py  paths.py  task_utils.py
src/knl/integrations/: __init__.py  mcp.py
src/knl/models/: __init__.py  config.py  crumb.py  docs.py  task.py
src/knl/ui/: approval.py
src/knl/utils/: __init__.py  cli_help.py  dt.py  git.py  patterns.py
tests/: __init__.py  test_cli_help.py  test_dt_utils.py  test_task.py
