[project]
name = "knl"
version = "0.1.0"
description = "Knowledge Retention Library - AI-powered task management and development assistant"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["development", "ai", "task-management", "knowledge", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # CLI Framework
    "typer>=0.15.0",
    "rich>=13.9.0",
    "click>=8.1.0",

    # Configuration & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",

    # Date/Time
    "arrow>=1.3.0",
    "pendulum>=3.0.0",

    # Data Processing
    "polars>=1.19.0",
    "glom>=24.0.0",
    "python-benedict>=0.33.2",

    # File System & Caching
    "pathspec>=0.12.0",
    "diskcache>=5.6.0",

    # AI/API Integration
    "anthropic>=0.40.0",
    "httpx>=0.28.0",

    # Utilities
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.0",  # Faster fuzzy matching

    # Version parsing
    "parver>=0.5.0",

    # CLI utilities
    "plumbum>=1.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.122.0",

    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "radon>=6.0.0",
    "pydeps>=1.12.0",

    # Data Validation
    "pandera>=0.20.0",

    # Refactoring
    "bowler>=0.9.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",

    # Build tools
    "shiv>=1.0.0",
    "pex>=2.24.0",
]

tui = [
    # Optional TUI features
    "textual>=1.0.0",
]

[project.scripts]
knl = "knl.cli:app"
kdt = "knl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=knl",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
